Ensure that submenu isn't cut off due to being higher than the page height

--- a/app/javascript/stylesheets/redesign/_layout.scss
+++ b/app/javascript/stylesheets/redesign/_layout.scss
@@ -14,6 +14,7 @@ body {
   // Prevent horizontal scrollbar:
   overflow-x: hidden;
   position: relative;
+  height: 100%;
 
   &__header {
     background-color: black;
